plugins {
    alias(libs.plugins.android.application)
    alias(libs.plugins.kotlin.android)
}

android {
    namespace 'com.prenticeweb.weightlossbuddy'
    compileSdk 35

    defaultConfig {
        applicationId "com.prenticeweb.weightlossbuddy"
        minSdk 24
        targetSdk 35
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    kotlinOptions {
        jvmTarget = '11'
    }
}

dependencies {

    implementation libs.appCompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintLayout
    implementation libs.commonsLang3
    implementation 'com.google.guava:guava:33.4.8-android'
    implementation "androidx.room:room-runtime:2.7.1"
    implementation("androidx.room:room-guava:2.7.1")
    implementation libs.gridlayout
    implementation 'com.github.PhilJay:MPAndroidChart:3.1.0'
    implementation 'com.github.Gruzer:simple-gauge-android:0.3.1'
    implementation libs.core.ktx
    implementation libs.androidx.compose.ui
    implementation libs.androidx.compose.material3
    implementation libs.androidx.compose.ui.tooling.preview
    implementation libs.androidx.lifecycle.runtime.ktx
    implementation libs.androidx.activity.compose

    testImplementation libs.androidx.compose.ui.test.junit4
    debugImplementation libs.androidx.compose.ui.tooling
    androidTestImplementation libs.androidx.espresso.core

    annotationProcessor "androidx.room:room-compiler:2.7.1"
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    compileOnly 'org.projectlombok:lombok:1.18.38'

    testImplementation libs.junitJupiter
    testImplementation libs.assertJ

    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core

}



tasks.withType(Test) {
    useJUnitPlatform()
//    jvmArgs '--enable-preview' -- with or without makes no much difference
}
